Allow modules to provide their own message files